--- a/src/main/webapp/WEB-INF/views/appointment/newAppointment.html
+++ b/src/main/webapp/WEB-INF/views/appointment/newAppointment.html
@@ -24,6 +24,10 @@
             <label for="date" class="form-label">Date</label>
             <input type="date" th:field="*{inputDate}" id="date" class="form-control form-control-lg" required>
         </div>
+        <div style="color:firebrick" th:if="${errorDate}">
+            <span th:errors="${errorDate}"> </span>
+            date can't be past !
+        </div>
 
         <div class="form-group">
             <label> select patient :
